# tokamaker_jax

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pages.yml  publish.yml
docs/: api.md  architecture.md  browser_explorer.md  case_manifest.md  comparisons.md  conf.py  design_decisions.md  equations.md  examples.md  fixed_boundary_upstream.md  getting_started.md  gui.md  index.md  io_contract.md  literature_reproduction.md  porting_map.md  progress.md  references.md  release.md  upstream_fixtures.md  validation.md
docs/_static/: benchmark_report.json  benchmark_threshold_report.json  case_manifest.json  cpc_seed_family_report.json  fixed_boundary_upstream_evidence.json  openfusiontoolkit_comparison_report.json  tokamaker_jax_explorer.html  upstream_comparison_report.json  upstream_fixture_summary.json
docs/validation/: benchmark_history_schema.json  benchmark_thresholds.json  build_fixed_boundary_evidence.py  fixed_boundary_upstream_evidence.json  physics_gates_manifest.json
examples/: benchmark_history.py  benchmark_report.py  fixed_boundary.toml  free_boundary_target.toml  generate_assets.py  quickstart.py  reproduce_cpc_seed_family.py
src/tokamaker_jax/: __init__.py  assembly.py  benchmark_history.py  benchmarks.py  cases.py  cli.py  comparison.py  config.py  domain.py  eqdsk.py  examples.py  fem.py  fem_equilibrium.py  free_boundary.py  geometry.py  gui.py  gui_runner.py  mesh.py  plotting.py  profiles.py  solver.py  upstream_fixed_boundary.py  upstream_fixtures.py  verification.py
src/tokamaker_jax/example_data/: __init__.py
tests/: conftest.py  test_assembly.py  test_benchmark_history.py  test_benchmarks.py  test_cases.py  test_ci_workflows.py  test_cli_plotting.py  test_cli_validate.py  test_comparison.py  test_config.py  test_docs_artifacts.py  test_eqdsk.py  test_fem.py  test_fem_equilibrium.py  test_fixed_boundary_evidence.py  test_free_boundary.py  test_geometry.py  test_gui.py  test_gui_runner.py  test_literature_reproduction.py  test_mesh.py  test_packaging.py  test_plotting.py  test_solver.py  test_upstream_fixed_boundary.py  test_upstream_fixtures.py  test_verification.py
