[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tokamaker-jax"
version = "0.1.0a0"
description = "A JAX-native, differentiable porting project for TokaMaker Grad-Shafranov equilibria."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-only" }
authors = [
  { name = "Rogerio Jorge" }
]
keywords = ["fusion", "tokamak", "grad-shafranov", "jax", "differentiable-programming"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "jax>=0.4.28",
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.8",
]
docs = [
  "furo>=2024.8.6",
  "myst-parser>=4",
  "sphinx>=8",
  "sphinx-autodoc-typehints>=2",
  "sphinx-copybutton>=0.5",
]
gui = [
  "nicegui>=2",
  "plotly>=5.22",
]

[project.urls]
Homepage = "https://github.com/rogeriojorge/tokamaker_jax"
Documentation = "https://tokamaker-jax.readthedocs.io"
Issues = "https://github.com/rogeriojorge/tokamaker_jax/issues"

[project.scripts]
tokamaker-jax = "tokamaker_jax.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tokamaker_jax"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["tokamaker_jax"]
omit = [
  "src/tokamaker_jax/gui.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

